# FamilySearchAI

./: .gitignore  README.md  pyproject.toml
data/faq_test_data/: additional_faqs.json  complete_faq_data_test.json  faq_test_data.json  faq_test_data2.json
data/processed/: downloaded_urls.csv  downloaded_urls.json  faq_data.csv  raw_combined.md
data/raw/: attaching-a-source-to.md  creating-new-people-in.md  detaching-sources-that-should.md  determining-if-a-source.md  editing-information-in-your.md  entering-a-reason-statement.md  from-my-source-box.md  how-do-i-add.md  how-do-i-attach.md  how-do-i-copy.md  how-do-i-correct.md  how-do-i-create.md  how-do-i-handle.md  how-do-i-print.md  how-do-i-search.md  how-do-i-use.md  how-tagging-works.md  new-look-and-feel.md  not-your-family-find.md  understanding-the-focus-person.md  understanding-the-source-linker.md  unfinished-attachments-how-to.md  using-drag-and-drop.md  using-source-linker-to.md  view-records-and-tree.md  viewing-the-record-or.md  viewing-the-source-image.md  what-are-record-hints.md  what-are-the-benefits.md  what-is-a-private.md  what-is-a-source.md  what-to-do-when.md
huggingface/: app.py
notebooks/: data_analysis.ipynb  data_collection.ipynb  data_evaluation.ipynb  rag_openai.ipynb
notebooks/faq_test_data/: faq_test_data.json
