[tool.poetry]
name = "familysearchai"
version = "0.1.0"
description = ""
authors = ["timytapilla <ajdnmkem@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.13"
mydependency = "^0.0.0"
requests = "^2.32.3"
markdownify = "^0.13.1"
numpy = "1.26.4"
beautifulsoup4 = "^4.12.3"
python-dotenv = "^1.0.1"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
